--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-dark navbar-custom sticky-top" style="background-color: #a6192e; opacity:.98;height: 7vh;">
+    <nav class="navbar navbar-expand-md navbar-dark navbar-custom sticky-top" style="background-color: #a6192e; opacity:.98;height: 6.5vh; max-height: 60px;">
 
         <a class="navbar-brand" href="index.html"><img src="images/uc_logo.png" style="width:116px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -110,7 +110,7 @@
                     <div class="col-md-4 mt-4">
                         <div class="card" style="width: 18rem;">
                             <div class="img-hover-zoom">
-                                <img class="card-img-top" src="images/Process_MGP2.png" alt="Why are the images broken?">
+                                <img class="card-img-top" src="images/dk.jpg" alt="Why are the images broken?">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title"><b>David Katz</b></h5>
